--- a/.github/workflows/publish-experimental.yml
+++ b/.github/workflows/publish-experimental.yml
@@ -1,28 +1,37 @@
+# File: .github/workflows/publish-experimental.yml
+
 name: Publish Experimental Packages
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_call:
+    inputs:
+      package_dir:
+        description: 'Directory of the package to publish'
+        required: false
+        default: './'
+        type: string
+    secrets:
+      NPM_TOKEN_READ_AND_WRITE:
+        description: 'NPM token with read and write permissions'
+        required: true
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     name: Deploy
     permissions:
-      # Required for `actions/checkout@v3`
       contents: read
-      # Required for `thollander/actions-comment-pull-request@v2`
       pull-requests: write
 
     steps:
       - name: Code Checkout
         uses: actions/checkout@v3.1.0
 
-      # Needed only for bumping package version and publishing npm packages.
       - name: Set up Node.js
         uses: actions/setup-node@v3.5.1
-      - run: echo '//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN_READ_AND_WRITE }}' > ~/.npmrc
+
+      - name: Configure NPM Auth
+        run: echo '//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN_READ_AND_WRITE }}' > ~/.npmrc
 
       - name: Set up Bun
         uses: oven-sh/setup-bun@v1
@@ -35,10 +44,12 @@ jobs:
 
       - name: Get package name from package.json
         id: package-name
-        run: echo "PACKAGE_NAME=$(jq -r .name package.json)" >> $GITHUB_ENV
+        run: |
+          cd ${{ inputs.package_dir }}
+          echo "PACKAGE_NAME=$(jq -r .name package.json)" >> $GITHUB_ENV
 
       - name: Bump Package
-        uses: ./.github/actions/bump-version
+        uses: ./.github/actions/bump-version/action.yml
 
       - name: Comment on PR
         uses: thollander/actions-comment-pull-request@v2
