--- a/.github/workflows/publish-experimental.yml
+++ b/.github/workflows/publish-experimental.yml
@@ -47,7 +47,7 @@ jobs:
           echo "PACKAGE_NAME=$(jq -r .name package.json)" >> $GITHUB_ENV
 
       - name: Bump Package
-        uses: .github/workflows/bump-version.yml
+        uses: ./.github/workflows/bump-version
 
       - name: Comment on PR
         uses: thollander/actions-comment-pull-request@v2
