--- a/.github/workflows/publish-experimental.yml
+++ b/.github/workflows/publish-experimental.yml
@@ -42,7 +42,10 @@ jobs:
         
       - name: Bump Package
         uses: colodenn/github-actions/.github/actions/bump-version@main
-
+        with:
+          package_dir: './'
+          npm_token_read_and_write: ${{ secrets.NPM_TOKEN_READ_AND_WRITE }}
+          
       - name: Get package name from package.json
         id: package-name
         run: |
