--- a/.github/actions/bump-version/action.yml
+++ b/.github/actions/bump-version/action.yml
@@ -56,5 +56,5 @@ runs:
       run: |
           cd ${{ inputs.package_dir }}
           # Authenticate with npm registry
-          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN_READ_AND_WRITE}" > ~/.npmrc
+          echo "//registry.npmjs.org/:_authToken=${{env.NPM_TOKEN_READ_AND_WRITE}}" >> ~/.npmrc
           npm publish --tag="${VERSION_TAG}"
