--- a/.github/actions/bump-version/action.yml
+++ b/.github/actions/bump-version/action.yml
@@ -1,14 +1,14 @@
 name: Publish Experimental Packages
 description: Bumps the version of an npm package and publishes it with an experimental tag.
 
+on:
+  workflow_call: []
+
 inputs:
   package_dir:
     description: Directory of the Package to Publish
     required: true
     default: './'
-  npm_token_read_and_write:
-    description: NPM token with read and write permissions
-    required: true
 
 outputs:
   VERSION_TAG:
@@ -16,45 +16,41 @@ outputs:
     value: ${{ steps.version-tag.outputs.VERSION_TAG }}
 
 runs:
-  using: 'composite'
+  using: composite
   steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
-
     - name: Construct Experimental Version Tag
       id: version-tag
       shell: bash
       run: |
-        BRANCH_NAME=$(echo ${GITHUB_HEAD_REF:-$GITHUB_REF_NAME} | sed -r 's/([a-z0-9])([A-Z])/\1-\L\2/g' | sed 's/_/-/g' | sed 's/\//-/g')
-        VERSION_TAG="${BRANCH_NAME}-experimental"
-        echo "VERSION_TAG=${VERSION_TAG}" >> $GITHUB_ENV
-        echo "VERSION_TAG=${VERSION_TAG}" >> $GITHUB_OUTPUT
+        BRANCH_NAME=$(echo ${GITHUB_HEAD_REF} | sed -r 's/([a-z0-9])([A-Z])/\1-\L\2/g' | sed 's/_/-/g' | sed 's/\//-/g')
 
-    - name: Bump Version in ${{ inputs.package_dir }}
+        echo "VERSION_TAG=$(echo $BRANCH_NAME)-experimental" >> $GITHUB_ENV
+        echo "VERSION_TAG=$(echo $VERSION_TAG)" >> $GITHUB_OUTPUT
+
+    - name: Bump ${{ inputs.package_dir }}
       shell: bash
       run: |
         cd ${{ inputs.package_dir }}
-        PACKAGE_NAME=$(jq -r '.name' package.json)
+
+        PACKAGE_NAME=$(cat package.json | grep "name" | cut -d':' -f 2 | cut -d'"' -f 2)
         echo "PACKAGE_NAME=${PACKAGE_NAME}" >> $GITHUB_ENV
 
-        REGEX="\-${VERSION_TAG}\.[0-9]+$"
+        # Matches any version that ends with "-author-ron-123-experimental.<number>". e.g. 1.0.0-leo-ron-123-experimental.0
+        REGEX="\-$VERSION_TAG.[0-9]\{1,\}$"
 
+        # Get all versions
         ALL_VERSIONS=$(npm view $PACKAGE_NAME versions --json | jq -r '.[]')
 
-        if ! echo "$ALL_VERSIONS" | grep -qE "$REGEX"; then
-          npm version prerelease --preid="${VERSION_TAG}" --no-git-tag-version
+        # Check if the experimental version already exists
+        if ! echo "$ALL_VERSIONS" | grep -q "$REGEX"; then
+          # If not, create it
+          npm version prerelease --preid=$VERSION_TAG --no-git-tag-version
         else
-          LATEST_VERSION=$(echo "$ALL_VERSIONS" | grep -E "$REGEX" | tail -1)
-          NEXT_VERSION=$(npx semver "$LATEST_VERSION" -i prerelease --preid="${VERSION_TAG}")
-          npm version "$NEXT_VERSION" --no-git-tag-version
+          # Otherwise up it
+          LATEST_VERSION=$(echo "$ALL_VERSIONS" | grep "$REGEX" | tail -1)
+          npm version $(npx semver $LATEST_VERSION -i prerelease --preid="$VERSION_TAG") --no-git-tag-version
         fi
 
     - name: Publish to npm
       shell: bash
-      env:
-        NPM_TOKEN_READ_AND_WRITE: ${{ inputs.npm_token_read_and_write }}
-      run: |
-          cd ${{ inputs.package_dir }}
-          # Authenticate with npm registry
-          echo "//registry.npmjs.org/:_authToken=${{env.NPM_TOKEN_READ_AND_WRITE}}" >> ~/.npmrc
-          npm publish --tag="${VERSION_TAG}"
+      run: cd ${{ inputs.package_dir }} && npm publish --tag="$VERSION_TAG"
