--- a/.github/actions/bump-version/action.yml
+++ b/.github/actions/bump-version/action.yml
@@ -2,13 +2,12 @@ name: Publish Experimental Packages
 description: Bumps the version of an npm package and publishes it with an experimental tag.
 
 on:
-  workflow_call: []
-
-inputs:
-  package_dir:
-    description: Directory of the Package to Publish
-    required: true
-    default: './'
+  workflow_call:
+    inputs:
+      package_dir:
+        description: Directory of the Package to Publish
+        required: true
+        default: './'
 
 outputs:
   VERSION_TAG:
@@ -22,35 +21,23 @@ runs:
       id: version-tag
       shell: bash
       run: |
-        BRANCH_NAME=$(echo ${GITHUB_HEAD_REF} | sed -r 's/([a-z0-9])([A-Z])/\1-\L\2/g' | sed 's/_/-/g' | sed 's/\//-/g')
+        BRANCH_NAME=$(echo "${GITHUB_HEAD_REF}" | sed -r 's/([a-z0-9])([A-Z])/\1-\L\2/g' | sed 's/_/-/g' | sed 's/\//-/g')
+        VERSION_TAG="${BRANCH_NAME}-experimental-${GITHUB_RUN_NUMBER}"
+        echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_ENV
+        echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_OUTPUT
 
-        echo "VERSION_TAG=$(echo $BRANCH_NAME)-experimental" >> $GITHUB_ENV
-        echo "VERSION_TAG=$(echo $VERSION_TAG)" >> $GITHUB_OUTPUT
-
-    - name: Bump ${{ inputs.package_dir }}
+    - name: Bump Version in ${{ inputs.package_dir }}
       shell: bash
       run: |
-        cd ${{ inputs.package_dir }}
-
-        PACKAGE_NAME=$(cat package.json | grep "name" | cut -d':' -f 2 | cut -d'"' -f 2)
+        cd "${{ inputs.package_dir }}"
+        PACKAGE_NAME=$(jq -r .name package.json)
+        PACKAGE_VERSION=$(jq -r .version package.json)
         echo "PACKAGE_NAME=${PACKAGE_NAME}" >> $GITHUB_ENV
-
-        # Matches any version that ends with "-author-ron-123-experimental.<number>". e.g. 1.0.0-leo-ron-123-experimental.0
-        REGEX="\-$VERSION_TAG.[0-9]\{1,\}$"
-
-        # Get all versions
-        ALL_VERSIONS=$(npm view $PACKAGE_NAME versions --json | jq -r '.[]')
-
-        # Check if the experimental version already exists
-        if ! echo "$ALL_VERSIONS" | grep -q "$REGEX"; then
-          # If not, create it
-          npm version prerelease --preid=$VERSION_TAG --no-git-tag-version
-        else
-          # Otherwise up it
-          LATEST_VERSION=$(echo "$ALL_VERSIONS" | grep "$REGEX" | tail -1)
-          npm version $(npx semver $LATEST_VERSION -i prerelease --preid="$VERSION_TAG") --no-git-tag-version
-        fi
+        NEW_VERSION="${PACKAGE_VERSION%-*}-${VERSION_TAG}"
+        npm version "${NEW_VERSION}" --no-git-tag-version
 
     - name: Publish to npm
       shell: bash
-      run: cd ${{ inputs.package_dir }} && npm publish --tag="$VERSION_TAG"
+      run: |
+        cd "${{ inputs.package_dir }}"
+        npm publish --tag="${VERSION_TAG}"
